--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Leptos Playground</title>
+        <title>CSV to Text</title>
         <link data-trunk rel="rust" data-wasm-opt="0" data-keep-debug=true />
     </head>
     <body></body>
