--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>CSV to Text</title>
-        <link data-trunk rel="rust" data-wasm-opt="0" data-keep-debug=true />
-    </head>
-    <body></body>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>CSV to Text</title>
+    <link data-trunk rel="rust" data-wasm-opt="0" data-keep-debug="true" />
+    <link data-trunk rel="copy-dir" href="/public" />
+    <link data-trunk rel="css" href="/style/output.css" />
+</head>
+
+<body></body>
+
 </html>
